# adal-im

./: .gitignore  Cargo.toml  readme.md
src/: main.rs
src/data/: mod.rs
src/error/: mod.rs
src/etcdcli/: mod.rs
src/network/: mod.rs
src/protocol/: binary_protocol.rs  exchange_route.rs  message_type.rs  mod.rs  packet.rs
src/server/: mod.rs
src/server/manager/: mod.rs
src/service/: exchange_route.rs  keepalive.rs  login.rs  mod.rs  private_text.rs
src/transport/: mod.rs
test/simple-client/: main.go
test/simple-p2p/: main.go
test/simple-p2p.1/: main.go
