[package]
name = "adal-im"
version = "0.1.0"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.1.4"
byteorder = "1.3.2"
pnet = "0.22.0"
etcd = "0.9.0"
hyper = "0.12.31"
futures = "0.1.28"
tokio = "*"


